# Smriti

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  publish.yml
bench/: .gitignore  run_longmemeval.py
smriti/: __init__.py  __main__.py  config.py  graph.py  mcp_server.py  memory.py  search.py  store.py  types.py  vectors.py
tests/: conftest.py  test_evolution.py  test_graph.py  test_invariants.py  test_networks.py  test_retrieval_pipeline.py  test_search.py  test_store.py  test_temporal.py  test_vectors.py
